Improved GTS80SS DAC sound core (Haunted House, Black Hole, Mars God of War, etc)

Improved DMD brightness level mapping for Gottlieb GTS3 & AlvinG
Retweak Pistol Poker to use the correct 12MHz clock

Add support for modulated/multi-level flashers on WPC (see whatsnewVPM.txt on how to enable it)
Add support for GI on Whitestar

Change scaling of the window content if DirectX disabled (incl. 64bit compile) to fit the full window, incl. bilinear upsampling of the DMD/Segments (latter using BasicBitmap by skywind)
Fix window size issues if an additional mini-DMD is in use

*** ROM SUPPORT *** Thanks to Timmo, Chad Hendrickson, Inkochnito, zaccaria-pinball.com
Kinda new:
Star Wars 20th Anniversary 1.06
Tommy 5.00 (unofficial MOD)

Clones:
Laser Cue L-3 (Neverending Bell Fix)
Stargate rev.5
Star God (alternate version)



Version 2.7 (June 08th, 2016) - "Alive and kicking"
------------------------------------------------------------------------------

*** CORE/CPU ***
64bit compilation supported
XMAME port for unix/linux systems
PROC support (needs special compile with PROC_SUPPORT defined) to drive (at least) real WPC machines with PinMAME/PROC

New S14001A sound core for old Sterns (Catacomb, Flight 2000, Freefall, Lightning, Orbitor 1, and Split Second)
Improved BSMT2000 sound core for Sega, Alvin G., Data East (Batman and newer), and Stern (up to Terminator 3) DMD generation games
Improved AT91 sound core for the rest of the Stern DMDs (Elvis, LOTR, RBION, Sopranos, Nascar/Grand Prix/Dale Jr.)
Improved Brave Team sound core

*** ROM SUPPORT *** Thanks to Inkochnito, Soren
New:
MAC: MAC Jungle (1995 version)
Sleic: Bike Race (2-ball play) (not working yet)
Sonic: Hang-On
Unknown: Wild Texas (Firepower II Modification)

Clones:
Bram Stoker's Dracula L-2C (competition MOD)
Creature from the Black Lagoon L-5C (competition MOD)
Dr. Dude LA-3C (competition MOD)
Earthshaker LA-4C (competition MOD)
Hook 4.01p (4.01 with Prototype Sound)
Inder Centaur (alternate version)